create view for manager pages

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="bower_components/google-code-prettify/bin/prettify.min.css" />
     <link rel="stylesheet" href="bower_components/github-markdown-css/github-markdown.css" />
     <link rel="stylesheet" href="bower_components/angular-markdown-toolkit/markdown.css" />
+    <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -96,6 +97,8 @@
 <script src="bower_components/angular-markdown-toolkit/markdown.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-off-click/offClick.js"></script>
+<script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
+<script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -110,6 +113,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
+<script src="scripts/controllers/users.js"></script>
 <script src="scripts/directives/facebookDirective.js"></script>
 <!-- endbuild -->
 
