module structure complete

--- a/app/index.html
+++ b/app/index.html
@@ -121,9 +121,34 @@
 <!--<div id="fb-root"></div>-->
 <script src="scripts/facebookInit.js"></script>
 
-<script>
+<!-- Site Module Building-->
 
-</script>
+<!-- About module loading-->
+<script src="scripts/modules/about/about.js"></script>
+<script src="scripts/modules/about/controllers/aboutMainCtrl.js"></script>
+<!-- End load about module-->
+
+<!-- Auth module loading-->
+<script src="scripts/modules/auth/auth.js"></script>
+<script src="scripts/modules/auth/controllers/authMainCtrl.js"></script>
+<!-- End load auth module-->
+
+<!-- Manager module loading-->
+<script src="scripts/modules/manager/manager.js"></script>
+<script src="scripts/modules/manager/controllers/managerMainCtrl.js"></script>
+<!-- End load manager module-->
+
+<!-- Static module loading-->
+<script src="scripts/modules/static/static.js"></script>
+<script src="scripts/modules/static/controllers/staticMainCtrl.js"></script>
+<!-- End load static module-->
+
+<!-- User module loading-->
+<script src="scripts/modules/user/user.js"></script>
+<script src="scripts/modules/user/controllers/userMainCtrl.js"></script>
+<!-- End load user module-->
+
+<!-- End site module building-->
 
 </body>
 </html>
