--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,7 @@
 <!-- Static module loading-->
 <script src="scripts/modules/static/static.js"></script>
 <script src="scripts/modules/static/controllers/staticMainCtrl.js"></script>
+<script src="scripts/modules/static/controllers/staticHomeCtrl.js"></script>
 <!-- End load static module-->
 
 <!-- User module loading-->
