render lispost of search page are complete

--- a/app/index.html
+++ b/app/index.html
@@ -142,6 +142,7 @@
 <script src="scripts/modules/static/static.js"></script>
 <script src="scripts/modules/static/controllers/staticMainCtrl.js"></script>
 <script src="scripts/modules/static/controllers/staticHomeCtrl.js"></script>
+<script src="scripts/modules/static/directives/staticHomeDirective.js"></script>
 <!-- End load static module-->
 
 <!-- User module loading-->
