build controller for all page complete

--- a/app/index.html
+++ b/app/index.html
@@ -136,6 +136,9 @@
 <!-- Manager module loading-->
 <script src="scripts/modules/manager/manager.js"></script>
 <script src="scripts/modules/manager/controllers/managerMainCtrl.js"></script>
+<script src="scripts/modules/manager/controllers/managerPostCtrl.js"></script>
+<script src="scripts/modules/manager/controllers/managerUserCtrl.js"></script>
+<script src="scripts/modules/manager/controllers/managerRoleCtrl.js"></script>
 <!-- End load manager module-->
 
 <!-- Static module loading-->
